--- a/package.json
+++ b/package.json
@@ -20,58 +20,58 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "^15.0.0",
-    "@angular/core": "^15.0.0",
-    "@angular/forms": "^15.0.0",
-    "@angular/platform-browser": "^15.0.0",
-    "@angular/platform-browser-dynamic": "^15.0.0",
-    "@angular/router": "^15.0.0",
-    "@capacitor/android": "4.5.0",
-    "@capacitor/app": "4.1.1",
-    "@capacitor/core": "4.5.0",
-    "@capacitor/haptics": "4.1.0",
-    "@capacitor/ios": "4.5.0",
-    "@capacitor/keyboard": "4.1.0",
-    "@capacitor/status-bar": "4.1.0",
-    "@ionic/angular": "^6.1.9",
-    "@ionic/cli": "^6.20.4",
+    "@angular/common": "^16.1.1",
+    "@angular/core": "^16.1.1",
+    "@angular/forms": "^16.1.1",
+    "@angular/platform-browser": "^16.1.1",
+    "@angular/platform-browser-dynamic": "^16.1.1",
+    "@angular/router": "^16.1.1",
+    "@capacitor/android": "^5.0.5",
+    "@capacitor/app": "^5.0.3",
+    "@capacitor/core": "^5.0.5",
+    "@capacitor/haptics": "^5.0.4",
+    "@capacitor/ios": "^5.0.5",
+    "@capacitor/keyboard": "^5.0.4",
+    "@capacitor/status-bar": "^5.0.4",
+    "@ionic/angular": "^7.0.14",
+    "@ionic/cli": "^7.1.1",
     "esri-loader": "^3.7.0",
-    "ionicons": "^6.0.3",
-    "rxjs": "~7.5.0",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.11.4"
+    "ionicons": "^7.1.2",
+    "rxjs": "~7.8.1",
+    "tslib": "^2.5.3",
+    "zone.js": "~0.13.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^15.0.0",
-    "@angular-eslint/builder": "^14.0.0",
-    "@angular-eslint/eslint-plugin": "^14.0.0",
-    "@angular-eslint/eslint-plugin-template": "^14.0.0",
-    "@angular-eslint/template-parser": "^14.0.0",
-    "@angular/cli": "^15.0.0",
-    "@angular/compiler": "^15.0.0",
-    "@angular/compiler-cli": "^15.0.0",
-    "@angular/language-service": "^15.0.0",
-    "@capacitor/cli": "4.5.0",
-    "@ionic/angular-toolkit": "^6.0.0",
-    "@types/arcgis-js-api": "3.40.0",
-    "@types/jasmine": "~4.0.0",
-    "@types/node": "^12.11.1",
-    "@typescript-eslint/eslint-plugin": "5.3.0",
-    "@typescript-eslint/parser": "5.3.0",
-    "eslint": "^7.6.0",
-    "eslint-plugin-import": "2.22.1",
-    "eslint-plugin-jsdoc": "30.7.6",
-    "eslint-plugin-prefer-arrow": "1.2.2",
-    "jasmine-core": "~4.3.0",
-    "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~6.4.0",
-    "karma-chrome-launcher": "~3.1.0",
+    "@angular-devkit/build-angular": "^16.1.0",
+    "@angular-eslint/builder": "^16.0.3",
+    "@angular-eslint/eslint-plugin": "^16.0.3",
+    "@angular-eslint/eslint-plugin-template": "^16.0.3",
+    "@angular-eslint/template-parser": "^16.0.3",
+    "@angular/cli": "^16.1.0",
+    "@angular/compiler": "^16.1.1",
+    "@angular/compiler-cli": "^16.1.1",
+    "@angular/language-service": "^16.1.1",
+    "@capacitor/cli": "^5.0.5",
+    "@ionic/angular-toolkit": "^9.0.0",
+    "@types/arcgis-js-api": "4.27.0",
+    "@types/jasmine": "~4.3.2",
+    "@types/node": "^20.3.1",
+    "@typescript-eslint/eslint-plugin": "5.59.11",
+    "@typescript-eslint/parser": "5.59.11",
+    "eslint": "^8.42.0",
+    "eslint-plugin-import": "2.27.5",
+    "eslint-plugin-jsdoc": "46.2.6",
+    "eslint-plugin-prefer-arrow": "1.2.3",
+    "jasmine-core": "~5.0.1",
+    "jasmine-spec-reporter": "~7.0.0",
+    "karma": "~6.4.2",
+    "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~3.0.2",
+    "karma-coverage-istanbul-reporter": "~3.0.3",
     "karma-jasmine": "~5.1.0",
-    "karma-jasmine-html-reporter": "~2.0.0",
-    "ts-node": "~8.3.0",
-    "typescript": "~4.8.4"
+    "karma-jasmine-html-reporter": "~2.1.0",
+    "ts-node": "~10.9.1",
+    "typescript": "~5.1.3"
   },
   "description": "An Ionic project"
 }
